DEVELOPE ** Detail Modal

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,12 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&family=Inter&family=Nanum+Gothic&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>React App</title>
   </head>
